# Watchman_BTech_Project

./: .gitignore  API_VALIDATION_REPORT.md  BUG_REPORT.md  BUILD_AUDIT.md  CHANGELOG.md  CLI_AUDIT.md  CODE_QUALITY_REPORT.md  DASHBOARD_BACKEND_AUDIT.md  DASHBOARD_THEME_REPORT.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_VALIDATION.md  DESIGN_ANALYSIS.md  ELECTRON_REMOVAL_REPORT.md  FEATURE_VALIDATION_REPORT.md  FINAL_PROJECT_STATUS.md  FINAL_REPOSITORY_STATUS.md  GITHUB_READINESS_REPORT.md  PROJECT_AUDIT.md  PROJECT_HEALTH_REPORT.md  README.md  SCOPE_COMPLIANCE_REPORT.md  STATIC_ANALYSIS_REPORT.md  SYSTEM_READINESS_REPORT.md  TEST_RESULTS.md  fix_demo.sh  install.sh  landing.html  out_node.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  uninstall.sh  watchman.service
blockchain/: truffle-config.js
blockchain/contracts/: WatchmanAnchor.sol  (+1 more)
dashboard/: .gitignore  index.html  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  BACKUP.md  BLOCKCHAIN.md  BLOCKCHAIN_SETUP.md  CLI.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  HOW_TO_USE.md  INSTALLATION.md  SECURITY.md  SYSTEMD.md  TROUBLESHOOTING.md
models/: features_cicids.json  isolation_forest.pkl  label_encoder.pkl
results/: classification_report.txt
src/: anchoring.py  app.py  auth.py  blockchain.py  cli.py  cross_validate.py  db.py  deploy_celo.py  detection_service.py  ganache_manager.py  ips.py  logger.py  merkle.py  predict.py  preprocessing.py  runner.py  train.py  watchman_config.py
tests/: test-alerts.db  test_api_contract.py  test_merkle.py
(+12 files in other folders)
